--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ server.port=8060
 spring.freemarker.template.loader.path=classpath:/templates
 spring.mail.host = smtp.163.com
 spring.mail.username = 18814129792@163.com
-spring.mail.password = joeson123
+spring.mail.password = 
 # \u8BBE\u7F6E\u662F\u5426\u9700\u8981\u8BA4\u8BC1\uFF0C\u5982\u679C\u4E3Atrue,\u90A3\u4E48\u7528\u6237\u540D\u548C\u5BC6\u7801\u5C31\u5FC5\u987B\u7684\uFF0C
 #\u5982\u679C\u8BBE\u7F6Efalse\uFF0C\u53EF\u4EE5\u4E0D\u8BBE\u7F6E\u7528\u6237\u540D\u548C\u5BC6\u7801\uFF0C\u5F53\u7136\u4E5F\u5F97\u770B\u4F60\u7684\u5BF9\u63A5\u7684\u5E73\u53F0\u662F\u5426\u652F\u6301\u65E0\u5BC6\u7801\u8FDB\u884C\u8BBF\u95EE\u7684\u3002
 spring.mail.properties.mail.smtp.auth=true
